--- a/fa.tex
+++ b/fa.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{report}
+\documentclass[a4paper]{article}
 
 \usepackage[cm]{fullpage}
 
@@ -11,6 +11,7 @@
 
 \theoremstyle{plain}
 \newtheorem{thm}{Th.}
+\newtheorem{corollary}{Corollary.}
 \newtheorem*{NB}{NB}
 
 \theoremstyle{definition}
@@ -26,4 +27,5 @@
 
 \begin{document}
   \input{colloq-2/01-L}
+  \input{colloq-2/02-fundamentals}
 \end{document}
