--- a/colloq-2/02-fundamentals.tex
+++ b/colloq-2/02-fundamentals.tex
@@ -4,12 +4,12 @@
 
 Пусть $(X, d)$ --- метрическое пространство.
 
-\begin{dfn}{Плотное множество}
+\begin{dfn}{Плотное множество}\\*
   Множество $M$ называется плотным в $X$,
   если $X\subset \overline M$
 \end{dfn}
 
-\begin{dfn}{Нигде не плотное множество}
+\begin{dfn}{Нигде не плотное множество}\\*
   Множество $M$ нигде не плотно в $X$,
   если внутренность его замыкания
   ${\overline M}^o$ есть пустое множество.
@@ -21,7 +21,7 @@
   не содержит открытых шаров
 \end{dfn}
 
-\begin{dfn}{Множество первой категории}
+\begin{dfn}{Множество первой категории}\\*
   Множество $M$ называется
   множеством первой категории (Бэра),
   если оно представимо в виде
@@ -29,14 +29,14 @@
   $M = \cup M_n$
 \end{dfn}
 
-\begin{dfn}{Множество второй категории}
+\begin{dfn}{Множество второй категории}\\*
   Множество $M$ называется
   множеством второй категории,
   если оно не является
   множеством первой категории
 \end{dfn}
 
-\begin{thm}{Бэра, о категориях}
+\begin{thm}{Бэра, о категориях}\\*
   Полное метрическое пространство
   есть множество второй категории.
 
@@ -53,6 +53,56 @@
   содержит непустое открытое множество
 \end{corollary}
 
-\begin{thm}{Банаха-Штейнгауса, принцип равномерной ограниченности}
-  
+\begin{thm}{Банаха-Штейнгауса, принцип равномерной ограниченности}\\*
+  Пусть
+  \begin{align*}
+    & X \text{--- банахово}\\
+    & Y \text{ --- нормированное}\\
+    & (A_\alpha\in\Hom(X,Y); \alpha\in J)\\
+    & \forall x\in X \sup_{\alpha\in J} \|A_\alpha x\| < \infty
+  \end{align*}
+  Тогда
+  $$\sup_{\alpha\in J} \|A_\alpha\|
+  = \sup_{\alpha\in J; \|x\|=1} \|A_\alpha x\| < \infty$$
 \end{thm}
+\begin{proof}
+  Рассмотрим семейство множеств
+  $$X_n = \{x\in X; \sup_{\alpha\in J} \|A_\alpha x\| \leq n\}$$
+  Такие множества замкнуты:
+  \begin{align*}
+    & \left\{
+      \begin{aligned}
+        & \{x_k; k\in\NN\}\subset X_n\\
+        & x_k\to x_0
+      \end{aligned}
+      \right.\\
+      & \implies x_0 \leq n \implies x_0\in X_n
+  \end{align*}
+  Очевидно, $X = \cup_n X_n$
+
+  Но $X$ --- полное метрическое,
+  а значит, по Th.(Baire's category theorem),
+  не является объединением счётного числа
+  замкнутых нигде не плотных множеств.
+  
+  Тогда $\exists X_m$,
+  содержащее замкнутый шар
+  $\overline B(x_0, r) = \{x\in X; \|x-x_0\|\leq r\}$
+
+  Оценим нормы операторов $A_\alpha$
+  
+  Пусть $\|x\|=1$, тогда:
+  \begin{align*}
+    & A_\alpha x = A_\alpha \frac{x_0 + rx - x_0}{r}
+    = \frac{1}{r} A_\alpha (x_0 + rx) - \frac{1}{r} A_\alpha x_0 \\
+    & \text{Но, } \|x_0 + rx - x_0\| = r, \text{поэтому} \\
+    & x_0+rx, x_0 \in X_m \\
+    & \implies
+      \|A_\alpha (x_0+rx)\|,
+      \|A_\alpha x_0\| \leq m \\
+    & \|A_\alpha x\| \leq \frac{2m}{r} \forall \alpha\in J
+  \end{align*}
+
+  Значит,
+  $$\sup_{\alpha\in J} \|A_\alpha\| \leq \frac{2m}{r}$$
+\end{proof}
