--- a/fa.tex
+++ b/fa.tex
@@ -11,6 +11,7 @@
 
 \theoremstyle{plain}
 \newtheorem{thm}{Th.}
+\newtheorem{lemma}{Lemma.}
 \newtheorem{corollary}{Corollary.}
 \newtheorem*{NB}{NB}
 
