--- a/colloq-2/01-L.tex
+++ b/colloq-2/01-L.tex
@@ -2,7 +2,7 @@
 
 Пусть $X$, $Y$ --- банаховы.
 
-\begin{dfn}{Линейный оператор}
+\begin{dfn}{Линейный оператор}\\*
   Отображение $A : X \mapsto Y$ называется линейным оператором, если
   \begin{align*}
     & A (x_1 + x_2) = A x_1 + A x_2 \\
@@ -10,8 +10,7 @@
   \end{align*}
 \end{dfn}
 
-\begin{thm}
-\label{th:l-b-def-equiv}
+\begin{thm}{О непрерывности ограниченного линейного оператора}\label{th:l-b-def-equiv}\\*
 Пусть $X$, $Y$ --- банаховы пространства над одним полем $\KK$,
 $A : X \mapsto Y$ --- линейный оператор.
 
@@ -51,9 +50,8 @@ $A : X \mapsto Y$ --- линейный оператор.
 
 Если $x=0$, то $$\|A x\|_Y = 0 \leq M\|x\| = 0$$
 
-Если $x\neq 0$, то
+Если $x\neq 0$, то поскольку  $\|\frac{x}{\|x\|}\|=1$
 $$\|A x\|_Y = \|A \frac{\|x\|x}{\|x\|}\|_Y = \|x\| \|A \frac{x}{\|x\|}\|_Y \leq M \|x\|$$
-поскольку  $\|\frac{x}{\|x\|}\|\leq 1$
 
 То есть $\forall x\in X \quad \|A x\|_Y \leq M \|x\|$.
 
@@ -68,11 +66,11 @@ $$\|A x\|_Y = \|A \frac{\|x\|x}{\|x\|}\|_Y = \|x\| \|A \frac{x}{\|x\|}\|_Y \leq 
 
 Эта теорема даёт основание для следующего определения:
 
-\begin{dfn}{Ограниченный линейный оператор}
+\begin{dfn}{Ограниченный линейный оператор}\\*
   Линейный оператор $A$
   называется ограниченным (или непрерывным) линейным оператором,
   если конечна величина
-  $$\|A\| = \sup_{\|x\|\leq 1} A x$$
+  $$\|A\| = \sup_{\|x\|\leq 1} \|A x\|$$
 
   Эта величина является нормой:
 
@@ -111,7 +109,7 @@ $$\|A\| = \sup_{\|x\|\leq 1} \|A x\|$$
   \end{align*}
 \end{proof}
 
-\begin{thm}{Банахово пространство линейных непрерывных операторов}
+\begin{thm}{Банахово пространство линейных непрерывных операторов}\\*
   Если $Y$ --- банахово, то и $\Hom(X, Y)$ --- банахово пространство
 \end{thm}
 \begin{proof}
