s/мажоранта/верхная грань/

--- a/colloq-2/02-fundamentals.tex
+++ b/colloq-2/02-fundamentals.tex
@@ -123,7 +123,7 @@
 
 \begin{dfn}{Максимальный элемент}\\*
   Элемент $x_0$ частично-упорядоченного множества $X$
-  называется максимальным элементом, или мажорантой, если
+  называется максимальным элементом если
   $$x_0\prec x \implies x_0=x$$
 \end{dfn}
 
@@ -141,7 +141,7 @@
   Если частично-упордоченное множество $X$
   таково, что любая цепь в нём имеет верхнюю грань
 
-  То $X$ имеет мажоранту
+  То $X$ имеет максимальный элемент
 \end{lemma}
 
 \begin{dfn}{Полунорма}\\*
