--- a/colloq-2/02-fundamentals.tex
+++ b/colloq-2/02-fundamentals.tex
@@ -127,6 +127,18 @@
   $$x_0\prec x \implies x_0=x$$
 \end{dfn}
 
+\begin{dfn}{Мажоранта}\\*
+  Элемент $x_0$ называется
+  верхней гранью, или мажорантой
+  частично-упорядоченного множества $X$,
+  если
+  \begin{align*}
+    & \forall x\in X\\
+    & x \text{ сравним с } x_0 \\
+    & x \prec x_0
+  \end{align*}
+\end{dfn}
+
 \begin{dfn}{Линейный порядок}\\*
   Множество $X$ называется линейно-упорядоченным,
   или \textbf{цепью}, если
